# LearningLab

./: README.md  docker-compose.yml  start.sh
backend/: .env  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  conversation.py  knowledge.py  models.py  plan.py
backend/app/core/: agent.py  knowledge.py  token_manager.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  model_config.py  plan.py  rerank_cache.py
backend/app/tools/: plan_generator.py  web_search.py
frontend/: .env  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: Chat.tsx  DocumentLibrary.tsx  Home.tsx  KnowledgeBase.tsx  LearningPlans.tsx  PlanDetail.tsx  SettingsModal.tsx
frontend/src/styles/: globals.css
